# prog

1lab/: .gitignore  CMakeLists.txt  hr.h  main.cpp  operator.h  py_var.txt  uml.txt
2_lab/: CMakeLists.txt  employee.h  main.cpp  salary_system.h  work_record.h  work_type.h
3lab/: CMakeLists.txt  bonus_strat.h  except.h  main.cpp  payroll.h  percent_strat.h  uml.txt  work_type.h
